<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name" translatable="false">CleanTalk</string>
    <string name="action_settings">Settings</string>
    <string name="label_today">Today</string>
    <string name="label_yesterday">Yesterday</string>
    <string name="label_week">Week</string>
    <string name="status_approved">Allows</string>
    <string name="status_forbidden">Forbidden</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_control_panel">Control panel</string>
    <string name="action_visit_site">Visit cleantalk.org</string>
    <string name="action_logout">Logout</string>
    <string name="loading">Loading&#8230;</string>
    <string name="auth_error">Login failure, please check email and password.</string>
    <string name="connection_error">Check internet connection and try again.</string>
    <string name="play_services_required">Google Play Services required for notification from the site. Notifications will be disabled.</string>

    <string name="time">Time:</string>
    <string name="sender">Sender:</string>
    <string name="type">Type:</string>
    <string name="state">State:</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_login_short">Login</string>
    <string name="action_forgot_password">Recover lost password</string>
    <string name="login_progress_signing_in">Signing in&#8230;</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="no_data">No data</string>
    <string name="click_back_again_to_exit">Please click BACK again to exit</string>
    <string name="allowed">Allowed</string>
    <string name="blocked">Blocked</string>
    <string name="spam">Spam</string>
    <string name="not_spam">Not spam</string>
    <string name="marked_as_spam">Marked as spam!</string>
    <string name="marking_as_spam">Marking as spam…</string>
    <string name="marked_as_not_spam">Marked as not spam!</string>
    <string name="marking_as_not_spam">Marking as not spam…</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="mark_it_as_spam">Mark it as spam?</string>
    <string name="mark_it_as_not_spam">Mark it as not spam?</string>

</resources>
