<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <View
        android:id="@+id/progress"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/progress_indeterminate_horizontal_holo"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="#55b6c9df" >

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <TextView
            style="@style/tableRowItem"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:padding="0dp"
            android:text="@string/allowed"
            android:textColor="@color/allowed_count_label" />

        <TextView
            style="@style/tableRowItem"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:padding="0dp"
            android:text="@string/blocked"
            android:textColor="@color/spam_count_label" />
    </LinearLayout>

    <ListView
        android:id="@android:id/list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fastScrollEnabled="true"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:fastScrollAlwaysVisible="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/header" />

    <TextView
        android:id="@android:id/empty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:text="@string/no_data"
        android:textColor="@color/text_light"
        android:textSize="9pt" />

</RelativeLayout>
