<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#44b6c9df"
    android:orientation="vertical"
    android:paddingBottom="4dp"
    android:paddingLeft="8dp"
    android:paddingRight="8dp"
    android:paddingTop="4dp" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <com.android.volley.toolbox.NetworkImageView
            android:id="@+id/imageViewLogo"
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:padding="4dp" />

        <TextView
            android:id="@+id/textViewSiteName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginRight="4dp"
            android:layout_toRightOf="@+id/imageViewLogo"
            android:background="@drawable/clickable_title_bg"
            android:clickable="true"
            android:padding="4dp"
            android:textColor="@color/text_color"
            android:textSize="9pt"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewNew"
            style="@style/TextViewNew"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="6dp"
            android:layout_marginTop="2dp"
            android:layout_alignParentTop="true"
            android:visibility="visible" />
    </RelativeLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:stretchColumns="0" >

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#22b6c9df"
            android:padding="0dp" >

            <TextView
                style="@style/tableRowTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_today"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/textViewTodayAllowed"
                style="@style/tableRowItemLink"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:text="0"
                android:textColor="@color/allowed_count_label" />

            <TextView
                android:id="@+id/textViewTodayBlocked"
                style="@style/tableRowItemLink"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:text="0"
                android:textColor="@color/spam_count_label" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#2265c1df" >

            <TextView
                style="@style/tableRowTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_yesterday"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/textViewYesterdayAllowed"
                style="@style/tableRowItemLink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:text="0"
                android:textColor="@color/allowed_count_label" />

            <TextView
                android:id="@+id/textViewYesterdayBlocked"
                style="@style/tableRowItemLink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:text="0"
                android:textColor="@color/spam_count_label" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#22349cbf" >

            <TextView
                style="@style/tableRowTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_week"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/textViewWeekAllowed"
                style="@style/tableRowItemLink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:text="0"
                android:textColor="@color/allowed_count_label" />

            <TextView
                android:id="@+id/textViewWeekBlocked"
                style="@style/tableRowItemLink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:text="0"
                android:textColor="@color/spam_count_label" />
        </TableRow>
    </TableLayout>

</LinearLayout>
